Fixed static file serving

--- a/ecocovoit/views/index.ejs
+++ b/ecocovoit/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Ecocovoit</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' type='text/css' href='/stylesheets/style.css' />
   </head>
   <body>
     <h1>Hello World</h1>
