--- a/ecocovoit/public/stylesheets/style.css
+++ b/ecocovoit/public/stylesheets/style.css
@@ -1,8 +1,20 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #00B7FF;
 }
 
 a {
+  color: #00B7FF;
+}
+
+h1{
   color: #00B7FF;
 }
