--- a/ecocovoit/views/index.ejs
+++ b/ecocovoit/views/index.ejs
@@ -2,10 +2,19 @@
 <html>
   <head>
     <title>Ecocovoit</title>
-    <link rel='stylesheet' type='text/css' href='/stylesheets/style.css' />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
-    <p>Welcome to ecocovoit</p>
+    <header>
+      <a href="">
+        <h1>Ecocovoit' + logo</h1>
+      </a>
+    </header>
+    <main>
+      <p>Welcome to ecocovoit</p>
+    </main>
+    <footer>
+      <p>Copyright - 2024</p>
+    </footer>
   </body>
 </html>
